--- a/java-command/jstack.html
+++ b/java-command/jstack.html
@@ -10,7 +10,7 @@
     <meta name="referrer" content="always">
     <meta http-equiv="Cache-Control" content="no-siteapp" />
 	<link rel="alternate" media="handheld" href="#" />    
-    <title>Java 命令(Java Virtual Machine Tool)-卞建权-整理资料 </title>
+    <title>Java jstack 命令(Java Virtual Machine Tool)-卞建权-整理资料 </title>
     <link rel="stylesheet" href="../css/bootstrap.css">
 </head>
 <body> 
