--- a/java-command/jvisualvm.html
+++ b/java-command/jvisualvm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -10,13 +10,13 @@
     <meta name="referrer" content="always">
     <meta http-equiv="Cache-Control" content="no-siteapp" />
 	<link rel="alternate" media="handheld" href="#" />    
-    <title>Java jconsole 命令-卞建权-整理资料 </title>
+    <title>Java jvisualvm 命令-卞建权-整理资料 </title>
     <link rel="stylesheet" href="../css/bootstrap.css">
 </head>
 <body> 
 <div class="container" role="main">
     <P>https://docs.oracle.com/javase/8/docs/technotes/tools/unix/jvisualvm.html </P>
-    <h3>jvisualvm命令(Java Virtual Machine Monitoring, Troubleshooting, and Profiling Tool)</h3>
+    <h3>jvisualvm 命令(Java Virtual Machine Monitoring, Troubleshooting, and Profiling Tool)</h3>
     <h3>1.介绍</h3>
     <p>
         <div class="alert alert-info">
